[gd_scene load_steps=2 format=3 uid="uid://cndg20mup1at6"]

[ext_resource type="Script" uid="uid://ulv65tikfxor" path="res://code/settings.gd" id="1_36axr"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_36axr")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -225.0
offset_right = 96.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false

[node name="background" type="Button" parent="MarginContainer2"]
layout_mode = 2
mouse_force_pass_scroll_events = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -119.0
offset_right = 57.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Exit_Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Exit_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "     "

[node name="Volume_Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Mute_Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute toggle"

[node name="Mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Fullscreen_Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen toggle"

[node name="Fullscreen" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Resolution_Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resolution"

[node name="Resolutions" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
item_count = 11
popup/item_0/text = "2560x1440"
popup/item_0/id = 0
popup/item_1/text = "1920x1080"
popup/item_1/id = 1
popup/item_2/text = "1366x768"
popup/item_2/id = 2
popup/item_3/text = "1280x720"
popup/item_3/id = 3
popup/item_4/text = "1920x1200"
popup/item_4/id = 4
popup/item_5/text = "1680x1050"
popup/item_5/id = 5
popup/item_6/text = "1440x900"
popup/item_6/id = 6
popup/item_7/text = "1280x800"
popup/item_7/id = 7
popup/item_8/text = "1024x768"
popup/item_8/id = 8
popup/item_9/text = "800x600"
popup/item_9/id = 9
popup/item_10/text = "640x480"
popup/item_10/id = 10

[node name="Graphics_Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Graphics"

[node name="Graphics" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
item_count = 3
popup/item_0/text = "High"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "Low"
popup/item_2/id = 2

[node name="Empty_Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back_to_menu_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back to menu"

[connection signal="pressed" from="MarginContainer2/background" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Graphics" to="." method="_on_graphics_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back_to_menu_button" to="." method="_on_back_to_menu_button_pressed"]
